--- a/A723CS10050.ipynb
+++ b/A723CS10050.ipynb
@@ -564,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "ccfd033c-71ca-46b9-8ac0-f265cccce6b9",
    "metadata": {},
    "outputs": [
@@ -598,13 +598,11 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "# Load the iris dataset from UCI URL (if you want to use a local file, change this to 'iris.csv')\n",
     "url = \"https://archive.ics.uci.edu/ml/machine-learning-databases/iris/iris.data\"\n",
     "\n",
     "# Define column names\n",
     "columns = ['sepal_length', 'sepal_width', 'petal_length', 'petal_width', 'species']\n",
     "\n",
-    "# Load dataset\n",
     "df = pd.read_csv(url, names=columns)\n",
     "\n",
     "# Check the data\n",
@@ -618,16 +616,17 @@
     "features = ['sepal_length', 'sepal_width', 'petal_length', 'petal_width']\n",
     "species = df['species'].unique()\n",
     "\n",
-    "# Plotting\n",
-    "for idx, feature in enumerate(features[:2]):  # Sepal features\n",
+    "# Sepal features\n",
+    "for idx, feature in enumerate(features[:2]):  \n",
     "    for sp in species:\n",
     "        axs[0, idx].hist(df[df['species'] == sp][feature], label=sp, alpha=0.6)\n",
     "    axs[0, idx].set_title(f'{feature.capitalize()}')\n",
     "    axs[0, idx].set_xlabel('cm')\n",
     "    axs[0, idx].set_ylabel('Frequency')\n",
     "    axs[0, idx].legend()\n",
-    "\n",
-    "for idx, feature in enumerate(features[2:]):  # Petal features\n",
+    "    \n",
+    "# Petal features\n",
+    "for idx, feature in enumerate(features[2:]):  \n",
     "    for sp in species:\n",
     "        axs[1, idx].hist(df[df['species'] == sp][feature], label=sp, alpha=0.6)\n",
     "    axs[1, idx].set_title(f'{feature.capitalize()}')\n",
